Just replace a value with a hash inside of a url invocation since there can't ever be colors in there and it breaks the parser. Fixes #2

--- a/test/fixtures/simple.css
+++ b/test/fixtures/simple.css
@@ -26,3 +26,7 @@
 .glyphicon {
   -moz-osx-font-smoothing: grayscale;
 }
+
+.weird-behavior {
+  behavior: url(#default#VML);
+}
